[gd_scene load_steps=11 format=3 uid="uid://dces801fdfy5u"]

[ext_resource type="Script" path="res://scripts/level_6.gd" id="1_8qocj"]
[ext_resource type="PackedScene" uid="uid://bkpuw7t2myv2b" path="res://scenes/tile_map.tscn" id="1_17jt4"]
[ext_resource type="PackedScene" uid="uid://dl5ayp7fe1v6b" path="res://scenes/player.tscn" id="2_3fdru"]
[ext_resource type="PackedScene" uid="uid://bj2kfy31qak10" path="res://scenes/hud.tscn" id="4_64b6w"]
[ext_resource type="PackedScene" uid="uid://cpxe4vse68eos" path="res://scenes/goblin.tscn" id="5_u540q"]
[ext_resource type="PackedScene" uid="uid://hmeu4mn3ib8b" path="res://scenes/slime.tscn" id="6_jdxti"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gt5ef"]
size = Vector2(44, 84)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kfj4k"]
size = Vector2(91, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p242w"]
size = Vector2(88, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_44gbn"]
size = Vector2(44, 88)

[node name="level_6" type="Node2D"]
script = ExtResource("1_8qocj")

[node name="TileMap" parent="." instance=ExtResource("1_17jt4")]
layer_0/tile_data = PackedInt32Array(0, 1, 0, 1, 1, 0, 2, 1, 0, 3, 1, 0, 4, 1, 0, 65541, 1, 0, 65542, 1, 0, 65543, 1, 0, 65544, 1, 0, 65545, 1, 0, 65546, 1, 0, 65547, 1, 0, 131084, 1, 0, 131085, 1, 0, 131086, 1, 0, 131087, 1, 0, 131088, 1, 0, 196625, 65536, 1, 196626, 131072, 1, 262163, 131072, 1, 262164, 131072, 1, 262165, 131072, 1, 327702, 262144, 1, 327703, 131072, 0, 393240, 131072, 1, 393241, 131072, 1, 458778, 131072, 1, 524314, 131072, 1, 589851, 131072, 1, 655387, 1, 0, 655388, 1, 0, 720924, 1, 0, 786461, 1, 0, 786460, 1, 0, 786459, 1, 0, 851994, 1, 0, 851993, 1, 0, 851992, 1, 0, 851991, 1, 0, 851990, 1, 0, 851989, 1, 0, 851988, 1, 0, 851987, 1, 0, 851986, 1, 0, 786449, 1, 0, 786448, 1, 0, 786447, 1, 0, 786446, 196608, 1, 786445, 131072, 1, 720908, 131072, 1, 655371, 131072, 1, 655370, 131072, 1, 655369, 327680, 0, 655368, 131072, 2, 655367, 131072, 2, 589830, 131072, 1, 589829, 131072, 1, 524292, 131072, 1, 458755, 131072, 1, 393218, 131072, 1, 393217, 131072, 1, 327680, 131072, 0, 393215, 131072, 0, 393214, 131072, 0, 327678, 1, 0, 458750, 131072, 1, 458751, 131072, 1, 524287, 131072, 1, 524288, 131072, 1, 589825, 131072, 1, 655361, 131072, 2, 720898, 1, 0, 720899, 1, 0, 786435, 1, 0, 786436, 1, 0, 851973, 1, 0, 851974, 1, 0, 851975, 1, 0, 851976, 1, 0, 851977, 65536, 1, 851978, 131072, 1, 851979, 131072, 1, 786444, 131072, 1, 720911, 1, 0, 720912, 1, 0, 655377, 131072, 2, 589841, 131072, 1, 524305, 131072, 1, 524304, 131072, 1, 524303, 131072, 1, 458766, 131072, 1, 458765, 131072, 1, 393228, 131072, 1, 393227, 131072, 1, 393226, 131072, 1, 327689, 131072, 0, 327688, 131072, 0, 327687, 131072, 0, 327686, 131072, 0, 327685, 131072, 0, 327684, 131072, 0, 327683, 131072, 0, 327682, 131072, 0, 458752, 131072, 1, 655362, 131072, 2, 917512, 1, 0, 917513, 65536, 1, 917514, 131072, 1, 917515, 131072, 1, 917516, 131072, 1, 851981, 131072, 1, 851982, 196608, 1, 851983, 1, 0, 720913, 1, 0, 655378, 131072, 2, 589842, 131072, 1, 458768, 131072, 1, 393232, 131072, 1, 327695, 131072, 0, 262158, 1, 0, 262157, 1, 0, 262156, 1, 0, 262155, 1, 0, 196618, 1, 0, 196617, 1, 0, 131080, 1, 0, 131079, 1, 0, 131078, 1, 0, 65540, 1, 0, 65539, 1, 0, 131075, 1, 0, 131074, 1, 0, 196610, 1, 0, 262146, 1, 0, 262147, 1, 0, 393219, 131072, 1, 458756, 131072, 1, 524293, 131072, 1, 524294, 131072, 1, 524295, 131072, 1, 458760, 131072, 1, 393224, 131072, 1, 262152, 1, 0, 393223, 131072, 1, 65560, 1, 0, 65559, 1, 0, 65558, 196608, 1, 21, 131072, 1, 20, 131072, 1, 22, 196608, 1, 23, 1, 0, 24, 1, 0, 19, 131072, 1, 18, 131072, 1, 17, 65536, 1, 16, 1, 0, 15, 1, 0, 14, 1, 0, 13, 1, 0, 12, 1, 0, 11, 1, 0, 10, 1, 0, 9, 1, 0, 8, 1, 0, 7, 1, 0, 6, 1, 0, 5, 1, 0, 65535, 1, 0, 65534, 1, 0, 131071, 1, 0, 196607, 1, 0, 262142, 1, 0, 524286, 131072, 1, 589822, 131072, 1, 655358, 131072, 1, 720894, 131072, 2, 786430, 1, 0, 851965, 1, 0, 917501, 1, 0, 983037, 1, 0, 1048573, 1, 0, 1114109, 1, 0, 1179645, 1, 0, 1179646, 1, 0, 1114110, 1, 0, 1114111, 1, 0, 1048576, 1, 0, 1048577, 1, 0, 1048578, 1, 0, 1048579, 1, 0, 1114116, 1, 0, 1114117, 1, 0, 1114118, 1, 0, 1114119, 1, 0, 1114120, 1, 0, 1114121, 65536, 1, 1179658, 131072, 1, 1179659, 131072, 1, 1179660, 131072, 1, 1179661, 131072, 1, 1179662, 196608, 1, 1179663, 1, 0, 1179664, 1, 0, 1179665, 1, 0, 1179666, 1, 0, 1179667, 1, 0, 1179668, 1, 0, 1179669, 1, 0, 1179670, 1, 0, 1179671, 1, 0, 1179672, 1, 0, 1179673, 1, 0, 1179674, 1, 0, 1179675, 1, 0, 1179676, 1, 0, 1114140, 1, 0, 1048604, 1, 0, 983068, 1, 0, 917532, 1, 0, 851996, 1, 0, 589853, 1, 0, 524317, 1, 0, 458781, 1, 0, 393245, 1, 0, 327709, 1, 0, 262173, 1, 0, 196637, 1, 0, 131100, 1, 0, 65564, 1, 0, 28, 1, 0, 27, 1, 0, 26, 1, 0, 25, 1, 0, 1114131, 1, 0, 1048595, 1, 0, 983059, 1, 0, 917523, 1, 0, 917522, 1, 0, 917521, 1, 0, 851985, 1, 0, 851984, 1, 0, 917520, 1, 0, 917519, 1, 0, 917518, 196608, 1, 917517, 131072, 1, 983053, 131072, 1, 983052, 131072, 1, 983051, 131072, 1, 983050, 131072, 1, 983049, 65536, 1, 983048, 1, 0, 983047, 1, 0, 917511, 1, 0, 917510, 1, 0, 917509, 1, 0, 917508, 1, 0, 851972, 1, 0, 851971, 1, 0, 851970, 1, 0, 786434, 1, 0, 786433, 1, 0, 720897, 1, 0, 720896, 1, 0, 655360, 131072, 2, 589824, 131072, 1, 655359, 131072, 1, 589823, 131072, 1, 720895, 131072, 2, 786431, 1, 0, 851967, 1, 0, 851966, 1, 0, 917502, 1, 0, 983038, 1, 0, 1048574, 1, 0, 1048575, 1, 0, 983039, 1, 0, 917503, 1, 0, 851968, 1, 0, 786432, 1, 0, 917504, 1, 0, 983040, 1, 0, 983041, 1, 0, 917505, 1, 0, 851969, 1, 0, 917506, 1, 0, 983042, 1, 0, 983043, 1, 0, 917507, 1, 0, 983044, 1, 0, 1048580, 1, 0, 1048581, 1, 0, 983045, 1, 0, 983046, 1, 0, 1048582, 1, 0, 1048583, 1, 0, 1048584, 1, 0, 1048585, 65536, 1, 1048586, 131072, 1, 1114122, 131072, 1, 1114123, 131072, 1, 1048587, 131072, 1, 1048588, 131072, 1, 1114124, 131072, 1, 1114125, 131072, 1, 1048589, 131072, 1, 1048590, 196608, 1, 983054, 196608, 1, 983055, 1, 0, 1048591, 1, 0, 1114127, 1, 0, 1114126, 196608, 1, 1114128, 1, 0, 1048592, 1, 0, 983056, 1, 0, 983057, 1, 0, 1048593, 1, 0, 1114129, 1, 0, 1114130, 1, 0, 1048594, 1, 0, 983058, 1, 0, 917524, 1, 0, 983060, 1, 0, 1048596, 1, 0, 1114132, 1, 0, 1114133, 1, 0, 1048597, 1, 0, 983061, 1, 0, 917525, 1, 0, 917526, 1, 0, 983062, 1, 0, 1048598, 1, 0, 1114134, 1, 0, 1114135, 1, 0, 1048599, 1, 0, 983063, 1, 0, 917527, 1, 0, 917528, 1, 0, 983064, 1, 0, 1048600, 1, 0, 1114136, 1, 0, 1114137, 1, 0, 1048601, 1, 0, 983065, 1, 0, 917529, 1, 0, 917530, 1, 0, 983066, 1, 0, 1048602, 1, 0, 1114138, 1, 0, 1114139, 1, 0, 1048603, 1, 0, 983067, 1, 0, 917531, 1, 0, 851995, 1, 0, 720917, 1, 0, 655381, 131072, 2, 589845, 131072, 1, 524309, 131072, 1, 458773, 131072, 1, 393237, 131072, 1, 327701, 131072, 1, 327700, 131072, 1, 327699, 131072, 1, 327698, 131072, 1, 262162, 131072, 1, 262161, 65536, 1, 262160, 1, 0, 196624, 1, 0, 196623, 1, 0, 196622, 1, 0, 196621, 1, 0, 196620, 1, 0, 196619, 1, 0, 131083, 1, 0, 131082, 1, 0, 131081, 1, 0, 262159, 1, 0, 327696, 131072, 0, 327697, 327680, 1, 393233, 131072, 1, 458769, 131072, 1, 458770, 131072, 1, 393234, 131072, 1, 393235, 131072, 1, 458771, 131072, 1, 524307, 131072, 1, 524306, 131072, 1, 589843, 131072, 1, 655379, 131072, 2, 720915, 1, 0, 720914, 1, 0, 786450, 1, 0, 786451, 1, 0, 786452, 1, 0, 720916, 1, 0, 655380, 131072, 2, 589844, 131072, 1, 524308, 131072, 1, 458772, 131072, 1, 393236, 131072, 1, 786453, 1, 0, 786454, 1, 0, 720918, 1, 0, 655382, 131072, 2, 589846, 131072, 1, 524310, 131072, 1, 458774, 131072, 1, 393238, 131072, 1, 393239, 131072, 1, 458775, 131072, 1, 524311, 131072, 1, 589847, 131072, 1, 655383, 131072, 2, 720919, 1, 0, 786455, 1, 0, 786456, 1, 0, 720920, 1, 0, 655384, 131072, 2, 589848, 131072, 1, 524312, 131072, 1, 458776, 131072, 1, 458777, 131072, 1, 524313, 131072, 1, 589849, 131072, 1, 655385, 131072, 2, 720921, 1, 0, 786457, 1, 0, 786458, 1, 0, 720922, 1, 0, 655386, 131072, 2, 589850, 131072, 1, 720923, 1, 0, 589837, 131072, 1, 524301, 131072, 1, 524300, 131072, 1, 458764, 131072, 1, 458763, 131072, 1, 458762, 131072, 1, 458761, 131072, 1, 393225, 131072, 1, 524297, 131072, 1, 524296, 131072, 1, 589832, 131072, 1, 589831, 131072, 1, 589833, 131072, 1, 589834, 131072, 1, 524298, 131072, 1, 524299, 131072, 1, 589835, 131072, 1, 589836, 131072, 1, 655372, 131072, 1, 655373, 131072, 1, 720909, 131072, 1, 720910, 196608, 1, 655374, 262144, 0, 589838, 131072, 1, 524302, 131072, 1, 589839, 131072, 1, 655375, 131072, 2, 655376, 131072, 2, 589840, 131072, 1, 851980, 131072, 1, 720903, 1, 0, 720902, 1, 0, 655366, 131072, 2, 655365, 131072, 2, 655364, 131072, 2, 589828, 131072, 1, 589827, 131072, 1, 524291, 131072, 1, 524290, 131072, 1, 458754, 131072, 1, 458753, 131072, 1, 524289, 131072, 1, 589826, 131072, 1, 655363, 131072, 2, 720900, 1, 0, 720901, 1, 0, 786437, 1, 0, 786438, 1, 0, 786439, 1, 0, 786440, 1, 0, 720904, 1, 0, 720905, 65536, 1, 786441, 65536, 1, 786442, 131072, 1, 720906, 131072, 1, 720907, 131072, 1, 786443, 131072, 1, 393229, 131072, 1, 327693, 131072, 0, 327692, 131072, 0, 327691, 131072, 0, 327690, 131072, 0, 262154, 1, 0, 262153, 1, 0, 327694, 131072, 0, 393230, 131072, 1, 393231, 131072, 1, 458767, 131072, 1, 393222, 131072, 1, 393221, 131072, 1, 393220, 131072, 1, 458757, 131072, 1, 458758, 131072, 1, 458759, 131072, 1, 196614, 1, 0, 196613, 1, 0, 131077, 1, 0, 131076, 1, 0, 196612, 1, 0, 196611, 1, 0, 262148, 1, 0, 262149, 1, 0, 262150, 1, 0, 262151, 1, 0, 196615, 1, 0, 196616, 1, 0, 196609, 1, 0, 131073, 1, 0, 65537, 1, 0, 65536, 1, 0, 131072, 1, 0, 196608, 1, 0, 262143, 1, 0, 327679, 1, 0, 262144, 1, 0, 262145, 1, 0, 327681, 131072, 0, 65538, 1, 0, 393216, 131072, 1, 262169, 1, 0, 196633, 1, 0, 131097, 1, 0, 65561, 1, 0, 65562, 1, 0, 131098, 1, 0, 196634, 1, 0, 262170, 1, 0, 327706, 131072, 0, 327705, 131072, 0, 327704, 131072, 0, 262168, 1, 0, 196632, 1, 0, 131096, 1, 0, 131095, 1, 0, 131094, 196608, 1, 131093, 131072, 1, 65557, 131072, 1, 65556, 131072, 1, 65555, 131072, 1, 65554, 131072, 1, 65553, 65536, 1, 65552, 1, 0, 65551, 1, 0, 65550, 1, 0, 65549, 1, 0, 65548, 1, 0, 131089, 65536, 1, 131090, 131072, 1, 131091, 131072, 1, 196627, 131072, 1, 196628, 131072, 1, 131092, 131072, 1, 196629, 131072, 1, 196630, 196608, 1, 262166, 196608, 1, 262167, 1, 0, 196631, 1, 0, 393242, 131072, 1, 393243, 1, 0, 327707, 1, 0, 262171, 1, 0, 196635, 1, 0, 131099, 1, 0, 65563, 1, 0, 196636, 1, 0, 262172, 1, 0, 327708, 1, 0, 393244, 1, 0, 458780, 1, 0, 458779, 1, 0, 524315, 1, 0, 524316, 1, 0, 589852, 1, 0, 1179657, 65536, 1, 1179656, 1, 0, 1179655, 1, 0, 1179654, 1, 0, 1179653, 1, 0, 1179652, 1, 0, 1179651, 1, 0, 1179650, 1, 0, 1179649, 1, 0, 1179648, 1, 0, 1245183, 1, 0, 1245182, 1, 0, 1245181, 1, 0, 1179647, 1, 0, 1114115, 1, 0, 1114114, 1, 0, 1114113, 1, 0, 1114112, 1, 0, -65514, 196608, 1, -65515, 131072, 1, -65516, 131072, 1, -65517, 131072, 1, -65518, 131072, 1, -65519, 65536, 1, -131054, 131072, 1, -131053, 131072, 1, -131052, 131072, 1, -65520, 131072, 1)
layer_2/tile_data = PackedInt32Array(917507, 2, 5, 131079, 2, 5, 917524, 2, 5, 1048593, 655362, 7, 720912, 655362, 0, 720917, 655362, 0, 262158, 655362, 0, 131074, 327682, 0, 131082, 327682, 0)

[node name="Player" parent="." instance=ExtResource("2_3fdru")]
position = Vector2(23, 129)

[node name="Hud" parent="." instance=ExtResource("4_64b6w")]

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PackedVector2Array(1, 0, 271.624, 0, 275, -17, 362, -14, 363.548, 0, 401, 0, 401.285, 83.6168, 431, 86, 436, 171, 399, 173, 402, 293, 234.926, 292.171, 234, 304, 149, 307, 147.171, 291.735, -1, 291, -0.560699, 162.728, -29, 163, -30, 90, -1, 90, 0, -1, -3, -3, -11, -7, -109, 59, -95, 268, -24, 395, 587, 378, 557, -52, 28, -61)

[node name="Goblin" parent="." instance=ExtResource("5_u540q")]
position = Vector2(312, 95)

[node name="Slime" parent="." instance=ExtResource("6_jdxti")]
position = Vector2(153, 111)

[node name="level_3_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_3_transition"]
position = Vector2(-25, 129)
shape = SubResource("RectangleShape2D_gt5ef")

[node name="Slime2" parent="." instance=ExtResource("6_jdxti")]
position = Vector2(208, 180)

[node name="level_7_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_7_transition"]
position = Vector2(192.5, 305)
shape = SubResource("RectangleShape2D_kfj4k")

[node name="level_8_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_8_transition"]
position = Vector2(320, -12)
shape = SubResource("RectangleShape2D_p242w")

[node name="level_9_transition" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="level_9_transition"]
position = Vector2(424, 129)
shape = SubResource("RectangleShape2D_44gbn")

[connection signal="body_entered" from="level_3_transition" to="." method="_on_level_3_transition_body_entered"]
[connection signal="body_entered" from="level_7_transition" to="." method="_on_level_7_transition_body_entered"]
[connection signal="body_entered" from="level_8_transition" to="." method="_on_level_8_transition_body_entered"]
[connection signal="body_entered" from="level_9_transition" to="." method="_on_level_9_transition_body_entered"]
